--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .todo-list {
   background-color: #0B2027;
-  font-family: "Space Mono", monospace;
+  font-family: "Roboto", monospace;
   padding: 1rem;
   min-width: 400px;
   min-height: 300px;
@@ -21,7 +21,7 @@ body {
 .title {
   border-bottom: 1px solid rgba(246, 241, 209, 0.5);
   font-size: 1.5rem;
-  font-family: "BioRhyme", serif;
+  font-family: "Roboto", serif;
   color: #F6F1D1;
   text-align: center;
 }
@@ -71,7 +71,7 @@ body {
 
 .todo-list {
   background-color: #0B2027;
-  font-family: "Space Mono", monospace;
+  font-family: "Roboto", "Space Mono", monospace;
   padding: 1rem;
   min-width: 400px;
   min-height: 300px;
@@ -80,7 +80,7 @@ body {
 .title {
   border-bottom: 1px solid rgba(246, 241, 209, 0.5);
   font-size: 1.5rem;
-  font-family: "BioRhyme", serif;
+  font-family: "Roboto", "BioRhyme", serif;
   color: #F6F1D1;
 }
 
